fix some add opens